# presentations

./: .gitignore  README.md
cpp_in_brussels_2017-03-15/ExpressingMemoryInCxx/: ExpressingMemManagementCxx_2017-03-15.key
cpp_in_brussels_2017-03-15/ExpressingMemoryInCxx/code/: 01-intro.cpp  02-unique_ptr.cpp
cpp_in_brussels_2017-03-15/TryingOutTemplateMetaprogramming/: TryingOutTemplateMetaprogramming.key  templates.cpp
cpp_in_brussels_2017-05-16/: agenda.key  poster.pages
cpp_in_brussels_2017-05-16/boost_graph_library/code/src/: CMakeLists.txt  Graph.hpp
cpp_in_brussels_2017-05-16/boost_graph_library/code/src/tests/: CMakeLists.txt  benchmarkDijkstra.cpp  testDijkstra.cpp  testGraph.cpp  utils.cpp  utils.hpp
cpp_in_brussels_2017-05-16/boost_graph_library/code/src_template/: CMakeLists.txt  Graph.cpp  Graph.hpp
cpp_in_brussels_2017-05-16/boost_graph_library/code/src_template/tests/: CMakeLists.txt  testGraph.cpp
cpp_in_brussels_2017-05-16/boost_graph_library/slides/: Boost graph library.pptx
cpp_in_brussels_2017-05-16/cmake_catch_google-benchmark/: Cmake-Catch-GoogleBenchmark_2017-05-16.key
cpp_in_brussels_2017-05-16/cmake_catch_google-benchmark/code/01-helloWorld/: CMakeLists.txt
cpp_in_brussels_2017-05-16/cmake_catch_google-benchmark/code/02-helloWorld-installTarget/: CMakeLists.txt
cpp_in_brussels_2017-05-16/cmake_catch_google-benchmark/code/03-libMoplot/: CMakeLists.txt  Curve2D.hpp  testCurve2D.cpp
cpp_in_brussels_2017-05-16/cmake_catch_google-benchmark/code/04-libMoplot-separateDirectories/: CMakeLists.txt
cpp_in_brussels_2017-05-16/cmake_catch_google-benchmark/code/04-libMoplot-separateDirectories/src/: CMakeLists.txt
cpp_in_brussels_2017-05-16/cmake_catch_google-benchmark/code/04-libMoplot-separateDirectories/tests/: CMakeLists.txt
cpp_in_brussels_2017-05-16/cmake_catch_google-benchmark/code/05-importedLibrary/src/: CMakeLists.txt  Curve2D.cpp
cpp_in_brussels_2017-05-16/cmake_catch_google-benchmark/code/05-importedLibrary/tests/: CMakeLists.txt  testCurve2D.cpp
cpp_in_brussels_2017-05-16/cmake_catch_google-benchmark/code/06-use-catchMain-and-export-cmake/: CMakeLists.txt
cpp_in_brussels_2017-05-16/cmake_catch_google-benchmark/code/06-use-catchMain-and-export-cmake/tests/: testCurve2D.cpp
cpp_in_brussels_2017-05-16/cmake_catch_google-benchmark/code/07-use-boost-filesystem-and-cpack/: CMakeLists.txt  main.cpp
cpp_in_brussels_2017-05-16/cmake_catch_google-benchmark/code/07-using-catch/tests/: CMakeLists.txt  testCurve2D.cpp
cpp_in_brussels_2017-05-16/cmake_catch_google-benchmark/code/08-benchmark/tests/: CMakeLists.txt  benchmarkCurve2D.cpp
cpp_in_brussels_2017-05-16/cmake_catch_google-benchmark/code/08-using-catch/src/: CMakeLists.txt
cpp_in_brussels_2017-05-16/cmake_catch_google-benchmark/code/09-benchmark/src/: Curve2D.cpp  Curve2D.hpp
